# IAM-Local-Backend

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/api/v1/: admin.py  audit.py  comptes.py  endpoints.py  gateway.py  groupes.py  habilitations.py  permissions.py  profils.py  roles.py  router.py  token_config.py  token_endpoints.py
app/core/: bootstrap_config.py  dependencies.py  enums.py  exceptions.py  module_registry.py
app/infrastructure/: __init__.py
app/infrastructure/cache/: __init__.py  redis.py
app/infrastructure/kafka/: __init__.py  consumer.py  producer.py  topics.py
app/middleware/: __init__.py  audit.py  auth.py  gateway.py  logging.py  permission_middleware.py
app/models/: __init__.py  assignation_groupe.py  assignation_role.py  base.py  compte_local.py  delegation.py  endpoint_permission.py  groupe.py  journal_acces.py  permission.py  permission_source.py  profil_local.py  role.py  token_models.py
app/repositories/: __init__.py  assignation_groupe.py  assignation_role.py  base.py  compte_local.py  endpoint_permission.py  groupe.py  journal_acces.py  permission.py  profil_local.py  role.py  token_config_repository.py
app/schemas/: __init__.py  assignation.py  base.py  compte_local.py  delegation.py  endpoint_schemas.py  gateway.py  groupe.py  habilitation.py  journal.py  permission.py  profil_local.py  role.py  token_schemas.py
app/services/: __init__.py  audit_service.py  auth_service.py  bootstrap_cleanup_service.py  compte_local_service.py  credential_service.py  endpoint_permission_service.py  endpoint_registration_service.py  gateway_service.py  groupe_service.py  habilitation_service.py  inscription_event_service.py  permission_registration_service.py  permission_service.py  profil_service.py  role_service.py
app/services/token_manager/: __init__.py  access_token_service.py  anomaly_detector.py  device_analysis_service.py  device_registry.py  refresh_token_service.py  session_manager.py  sync_service.py  token_audit.py  (+4 more)
app/utils/: gateway_helpers.py
docs/: API_COMPLETE_IAM.md  API_REFERENCE.md  CURL_COMMANDS_IAM.md  CURL_COMMANDS_IAM.sh  GATEWAY_ARCHITECTURE.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_assignation_groupe_perimetre.py  89ec81ffa4c8_auto_migration_20260420_092731.py
seeds/: bootstrap.py  seed_loader.py
seeds/data/: groupes.yaml  iam_seed.json  permissions.yaml  roles.yaml
seeds/scripts/: run_bootstrap.py
